syntax = "proto3";

import "google/protobuf/empty.proto";

package eugeneuskov.chat.broadcast;
option go_package = "proto/pb";

service Broadcast {
  rpc Connect(ConnectRequest) returns (stream Content);
  rpc SendMessage(Content) returns (google.protobuf.Empty);
}

message User {
  string id = 1;
  string name = 2;
}

message Content {
  string id = 1;
  User user = 2;
  string message = 3;
  string timestamp = 4;
  string type = 5;
}

message ConnectRequest {
  User user = 1;
  bool active = 2;
}